fix: svg import

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="logo_container">
-        <img src="./assets/images/icon_128.svg" alt="">
+        <img src="../assets/images/icon_128.svg" alt="">
         <span>Likedin</span>
     </div>
 
