--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,6 +11,7 @@
     <div class="logo_container">
         <img src="../assets/images/icon_128.svg" alt="">
         <span>Likedin</span>
+        <span class="version">v1.1</span>
     </div>
 
     <div class="options_container">
