feat: blocked outside linkedin

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;600;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="popup.css">
@@ -24,6 +25,10 @@
         </div>
 
         <div class="reaction_option"></div>
+    </div>
+
+    <div class="likedin_alert">
+        Acesse o Linkedin para utilizar a extensão.
     </div>
 
     <footer>
