feat: added toggle theme option

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -25,6 +25,11 @@
                 </label>
             </div>
 
+            <div class="toggle-theme_container">
+                <p>Tema</p>
+                <span><i data-feather="moon"></i></span>
+            </div>
+
             <div class="reaction_option">
                 <span>Reação padrão</span>
                 <div class="reactions_container">
@@ -54,6 +59,7 @@
                 </div>
             </div>
         </div>
+        <span class="not-working hidden"></span>
     </main>
 
     <div class="likedin_alert">
@@ -70,7 +76,9 @@
         </a>
     </footer>
     <script type="module" src="popup.js"></script>
+    <script type="module" src="switch.js"></script>
     <script type="module" src="reactions.js"></script>
+    <script type="module" src="theme.js"></script>
 </body>
 
 </html>
